# daiklave

./: .gitignore  Cargo.toml  Dockerfile  README.md  database_diagram normalized.drawio  database_diagram.drawio  package-lock.json  package.json
daiklave-axum/: Cargo.toml
daiklave-axum/src/: build_state.rs  main.rs
daiklave-axum/src/api/: auth.rs  decode_cookie.rs  login.rs  mod.rs  why_error.rs
daiklave-axum/src/auth/: handle_login.rs  handle_login_callback.rs  mod.rs
daiklave-axum/src/discord/: auth.rs  create_app_commands.rs  mod.rs
daiklave-axum/src/mongo/: mod.rs
daiklave-axum/src/shared/: error.rs  mod.rs  to_bson.rs
daiklave-core/: Cargo.toml
daiklave-core/migrations/: 20221130012651_add-player.up.sql  20221130020937_add-character.up.sql  20221130025409_add-attributes.down.sql  20221130133249_add-health.down.sql  20221130151420_add-weapons-armor.down.sql  20221203011401_add-merits.down.sql  20221203011401_add-merits.up.sql
daiklave-core/src/: anima.rs  artifact.rs  brainstorming.rs  essence.rs  exalt_type.rs  hearthstone.rs  id.rs  initiative.rs  lib.rs  limit.rs  mutations.rs  wonder.rs
daiklave-core/src/abilities/: abilities_vanilla.rs  add_specialty.rs  diff.rs  enums.rs  error.rs  memo.rs  mod.rs  remove_specialty.rs  set.rs  update.rs
daiklave-core/src/armor/: destroy.rs  diff.rs  mod.rs  tables.rs  update.rs
daiklave-core/src/artifact/: add.rs  attune.rs  mod.rs  remove.rs
daiklave-core/src/attributes/: attribute.rs  category.rs  diff.rs  mod.rs  name.rs  set.rs  tables.rs  update.rs
daiklave-core/src/campaign/: mod.rs  tables.rs
daiklave-core/src/character/: builder.rs  command.rs  default.rs  diff.rs  event_source.rs  guided.rs  memo.rs  mod.rs  redo.rs  tables.rs  undo.rs  update.rs
daiklave-core/src/charms/: cost.rs  cost_type.rs  error.rs  mod.rs  tables.rs
daiklave-core/src/concept/: set.rs
daiklave-core/src/craft/: craft_memo.rs  diff.rs  mod.rs  name.rs  tables.rs  update.rs
daiklave-core/src/data_source/: mod.rs
daiklave-core/src/exaltation/: martial_artist.rs  memo.rs  mod.rs
daiklave-core/src/experience/: gain.rs  gain_exalt.rs  mod.rs  spend.rs  spend_exalt.rs
daiklave-core/src/health/: damage_level.rs  diff.rs  heal_damage.rs  mod.rs  set.rs  tables.rs  take_damage.rs  update.rs  wound_penalty.rs
daiklave-core/src/hearthstones/: mod.rs
daiklave-core/src/intimacies/: diff.rs  mod.rs  tables.rs  update.rs
daiklave-core/src/languages/: error.rs
daiklave-core/src/martial_arts/: create.rs  diff.rs  martial_artist.rs  mod.rs  update.rs
daiklave-core/src/merits/: create.rs  destroy.rs  mod.rs  tables.rs  update.rs
daiklave-core/src/name/: set.rs
daiklave-core/src/player/: create.rs  mod.rs
daiklave-core/src/prerequisite/: mod.rs  tables.rs
daiklave-core/src/solar/: mod.rs  zenith.rs
daiklave-core/tests/: lib_doctest.rs  lifecycle.rs  test_abilities.rs  test_armor.rs  test_attributes.rs  test_attunement.rs  test_charms.rs  test_essence.rs  test_exalt_type.rs  test_health.rs  test_hearthstones.rs  test_merits.rs  test_name_and_concept.rs  test_weapons.rs  test_willpower.rs  test_wonders.rs
daiklave-deploy/: Cargo.toml
daiklave-deploy/src/: campaign.rs  character.rs  help.rs  main.rs  version.rs
daiklave-mongo/: Cargo.toml
daiklave-mongo/schema/: charm.json
daiklave-mongo/src/: lib.rs
daiklave-postgres/: Cargo.toml
daiklave-postgres/migrations/: 20221130131537_add-intimacies.down.sql  20221130133249_add-health.up.sql  20221130151420_add-weapons-armor.up.sql  20221202202645_add-charms.down.sql  20221202202645_add-charms.up.sql  20221209182102_add-prerequisites.down.sql  20221217015530_add-martial-arts.up.sql  20221217191147_add-craft.down.sql  20221217191147_add-craft.up.sql
daiklave-postgres/src/: abilities.rs  armor.rs  attributes.rs  campaign.rs  character.rs  craft.rs  health.rs  intimacies.rs  lib.rs  martial_arts.rs  merits.rs  player.rs  retrieve.sql  weapons.rs
(+1770 files in other folders)
