[package]
name = "daiklave-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", version = "0.11.5" }
