[package]
name = "daiklave-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.4", features = ["headers"]}
axum-extra = {version = "0.4.2", features = ["cookie-signed", "spa"]}
ed25519-dalek = "1.0.1"
hex = "0.4.3"
hyper = "0.14.24"
mongodb = "2.3.1"
rand = "0.8.5"
redis = {version = "0.22.3", features = ["tokio-comp"]}
reqwest = {version = "0.11.14", features = ["json"]}
serde = "1.0.152"
serde_json = "1.0.91"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "f0c511a" }
time = "0.3.17"
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
