[package]
name = "daiklave_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["database"]
database = []

[dependencies]
eyre = "0.6.8"
serde = {version = "1.0.149", features = ["derive"]}

[dev-dependencies]
postcard = {version = "1.0.2", features = ["alloc"]}