[package]
name = "daiklave-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
futures = "0.3.26"
reqwest = {version = "0.11.14", features = ["json"]}
serde_json = "1.0.91"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "f0c511a" }
